# main-project-1

./: .gitignore  CMakeLists.txt  README.md  nvs_init_data.csv  partitions.csv  partitions_old.csv  settings.json
components/ecomax/: CMakeLists.txt  ecomax.c
components/ecomax/include/: ecomax.h
components/etatherm/: CMakeLists.txt  etatherm.c
components/etatherm/include/: etatherm.h
components/etatherm_regulator/: CMakeLists.txt  etatherm.c
components/etatherm_regulator/include/: etatherm.h
components/helper/: CMakeLists.txt  helper.c
components/helper/include/: helper.h
components/http_client/: CMakeLists.txt  http_client.c
components/http_client/include/: http_client.h
components/program/: CMakeLists.txt  program.c  program_dp_led_test.c  program_eta.c  program_test.c  program_wattrouter.c  program_wattrouter_ecomax.c
components/program/include/: program.h
components/server_comm/: CMakeLists.txt  server_comm.c
components/server_comm/include/: server_comm.h
components/wattrouter_mx/: CMakeLists.txt  rs485_modbus_rtu.c  wattrouter_mx.c
components/wattrouter_mx/include/: wattrouter_mx.h
components/wifi/: CMakeLists.txt  wifi.c  wifi_new.c
components/wifi/include/: wifi.h
main/: main.c
